[gd_scene load_steps=55 format=2]

[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/PracticeChar.png" type="Texture" id=2]
[ext_resource path="res://Characters/PracticeChar.gd" type="Script" id=3]
[ext_resource path="res://Assets/lifebarUnder.png" type="Texture" id=4]
[ext_resource path="res://Assets/lifebarOver.png" type="Texture" id=5]
[ext_resource path="res://Assets/lifebarProgress.png" type="Texture" id=6]
[ext_resource path="res://Assets/BAUHS93.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/BlueColor.shader" type="Shader" id=9]
[ext_resource path="res://Assets/WhiteColor.shader" type="Shader" id=10]
[ext_resource path="res://Assets/RedColor.shader" type="Shader" id=11]

[sub_resource type="ShaderMaterial" id=41]
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "attackBQDown"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 33, 34, 35 ]
}

[sub_resource type="Animation" id=4]
resource_name = "attackBQLeft"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32 ]
}

[sub_resource type="Animation" id=5]
resource_name = "attackBQRight"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32 ]
}

[sub_resource type="Animation" id=6]
resource_name = "attackBQUp"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idleDown"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idleLeft"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idleRight"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=10]
resource_name = "idleUp"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=11]
resource_name = "moveDown"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24 ]
}

[sub_resource type="Animation" id=12]
resource_name = "moveLeft"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=13]
resource_name = "moveRight"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=14]
resource_name = "moveUp"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29 ]
}

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "attackBQLeft"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "attackBQDown"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "attackBQRight"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "attackBQUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 32 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 33 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 34 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 35 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "idleLeft"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "idleDown"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "idleRight"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "idleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 24 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 25 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 26 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 27 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "moveLeft"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "moveDown"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "moveRight"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "moveUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=17]
blend_point_0/node = SubResource( 28 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 29 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 30 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 31 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachine" id=22]
states/AttackBQ/node = SubResource( 15 )
states/AttackBQ/position = Vector2( 488, 168 )
states/Idle/node = SubResource( 16 )
states/Idle/position = Vector2( 310, 90 )
states/Move/node = SubResource( 17 )
states/Move/position = Vector2( 160, 90 )
transitions = [ "Move", "Idle", SubResource( 18 ), "Idle", "Move", SubResource( 19 ), "Idle", "AttackBQ", SubResource( 20 ), "AttackBQ", "Idle", SubResource( 21 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=44]

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 6, 8 )

[sub_resource type="DynamicFont" id=46]
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=40]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=43]
resource_name = "StartBlue"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=42]
resource_name = "StartRed"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}

[sub_resource type="Animation" id=37]
resource_name = "StartWhite"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=38]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="PracticeChar" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 1 )]
character = "PracticeChar"
health = 10
maxHealth = 10
speed = 50.0
mlRate = 2.0
mrRate = 1.0
bqRate = 1.0
movSpeed = 300.0

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 41 )
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attackBQDown = SubResource( 3 )
anims/attackBQLeft = SubResource( 4 )
anims/attackBQRight = SubResource( 5 )
anims/attackBQUp = SubResource( 6 )
anims/idleDown = SubResource( 7 )
anims/idleLeft = SubResource( 8 )
anims/idleRight = SubResource( 9 )
anims/idleUp = SubResource( 10 )
anims/moveDown = SubResource( 11 )
anims/moveLeft = SubResource( 12 )
anims/moveRight = SubResource( 13 )
anims/moveUp = SubResource( 14 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 22 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 44 )
parameters/AttackBQ/blend_position = Vector2( 0.451251, -0.181034 )
parameters/Idle/blend_position = Vector2( 0.0129422, 0.656566 )
parameters/Move/blend_position = Vector2( -0.294219, 0.043771 )

[node name="AttackPosition" type="Position2D" parent="."]

[node name="EffectPosition" type="Position2D" parent="."]
position = Vector2( -9, -10 )

[node name="AttackRateML" type="Timer" parent="."]
one_shot = true

[node name="AttackRateMR" type="Timer" parent="."]
one_shot = true

[node name="AttackRateBQ" type="Timer" parent="."]
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource( 8 )]
visible = false
collision_layer = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 45 )

[node name="Effect" type="Timer" parent="."]

[node name="Lifebar" type="TextureProgress" parent="."]
margin_left = -6.0
margin_top = -11.0
margin_right = 6.0
margin_bottom = -8.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true

[node name="LifebarText" type="Label" parent="Lifebar"]
margin_top = -1.0
margin_right = 24.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.25 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 46 )
align = 1

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 40 )
anims/StartBlue = SubResource( 43 )
anims/StartRed = SubResource( 42 )
anims/StartWhite = SubResource( 37 )
anims/Stop = SubResource( 38 )

[connection signal="effectOver" from="." to="." method="_on_PracticeChar_effectOver"]
[connection signal="objectiveChanged" from="." to="." method="_on_PracticeChar_objectiveChanged"]
[connection signal="tickOver" from="." to="." method="_on_PracticeChar_tickOver"]
[connection signal="health_depleted" from="Stats" to="." method="_on_Stats_health_depleted"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="AttackRateML" to="." method="_on_AttackRateML_timeout"]
[connection signal="timeout" from="AttackRateMR" to="." method="_on_AttackRateMR_timeout"]
[connection signal="timeout" from="AttackRateBQ" to="." method="_on_AttackRateBQ_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Effect" to="." method="_on_Effect_timeout"]

[editable path="Hurtbox"]
